# bood-backend-main

./: .dockerignore  .gitignore  Dockerfile  README.md  db_start_sqlite3_script.py  manage.py  pyproject.toml  requirements.txt
bood/: asgi.py  settings.py  urls.py  wsgi.py
bood_account/: admin.py  apps.py  email.py  models.py  serializers.py  tests.py  urls.py
bood_account/migrations/: 0001_initial.py
bood_account/templates/: activation.html  confirmation.html  password_changed_confirmation.html  password_reset.html
bood_app/: admin.py  api_docs.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
bood_app/migrations/: 0001_initial.py  0002_alter_personcard_target.py
bood_app/services/: kbjy.py
bood_app/tests/: base_classes.py  test_calculate.py  test_eating.py  test_faq.py  test_femaletype.py  test_measurements.py  test_personcard.py  test_products.py  test_recipes.py  test_recommendation.py
bood_app/utils/: eating_validation.py  person_card_validation.py  resources.py  view_validation.py
